crates/ruff_python_parser/tests/snapshots/invalid_syntax@type_param_type_var_tuple_invalid_default_expr.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/type_param_type_var_tuple_invalid_default_expr.py
---
## AST

```
Module(
    ModModule {
        node_index: AtomicNodeIndex(..),
        range: 0..147,
        body: [
            TypeAlias(
                StmtTypeAlias {
                    node_index: AtomicNodeIndex(..),
                    range: 0..24,
                    name: Name(
                        ExprName {
                            node_index: AtomicNodeIndex(..),
                            range: 5..6,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 6..18,
                            node_index: AtomicNodeIndex(..),
                            type_params: [
                                TypeVarTuple(
                                    TypeParamTypeVarTuple {
                                        range: 7..17,
                                        node_index: AtomicNodeIndex(..),
                                        name: Identifier {
                                            id: Name("Ts"),
                                            range: 8..10,
                                            node_index: AtomicNodeIndex(..),
                                        },
                                        default: Some(
                                            Starred(
                                                ExprStarred {
                                                    node_index: AtomicNodeIndex(..),
                                                    range: 13..17,
                                                    value: Name(
                                                        ExprName {
                                                            node_index: AtomicNodeIndex(..),
                                                            range: 14..17,
                                                            id: Name("int"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: AtomicNodeIndex(..),
                            range: 21..24,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: AtomicNodeIndex(..),
                    range: 25..56,
                    name: Name(
                        ExprName {
                            node_index: AtomicNodeIndex(..),
                            range: 30..31,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 31..50,
                            node_index: AtomicNodeIndex(..),
                            type_params: [
                                TypeVarTuple(
                                    TypeParamTypeVarTuple {
                                        range: 32..49,
                                        node_index: AtomicNodeIndex(..),
                                        name: Identifier {
                                            id: Name("Ts"),
                                            range: 33..35,
                                            node_index: AtomicNodeIndex(..),
                                        },
                                        default: Some(
                                            Starred(
                                                ExprStarred {
                                                    node_index: AtomicNodeIndex(..),
                                                    range: 38..49,
                                                    value: BoolOp(
                                                        ExprBoolOp {
                                                            node_index: AtomicNodeIndex(..),
                                                            range: 39..49,
                                                            op: Or,
                                                            values: [
                                                                Name(
                                                                    ExprName {
                                                                        node_index: AtomicNodeIndex(..),
                                                                        range: 39..42,
                                                                        id: Name("int"),
                                                                        ctx: Load,
                                                                    },
                                                                ),
                                                                Name(
                                                                    ExprName {
                                                                        node_index: AtomicNodeIndex(..),
                                                                        range: 46..49,
                                                                        id: Name("str"),
                                                                        ctx: Load,
                                                                    },
                                                                ),
                                                            ],
                                                        },
                                                    ),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: AtomicNodeIndex(..),
                            range: 53..56,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: AtomicNodeIndex(..),
                    range: 57..84,
                    name: Name(
                        ExprName {
                            node_index: AtomicNodeIndex(..),
                            range: 62..63,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 63..78,
                            node_index: AtomicNodeIndex(..),
                            type_params: [
                                TypeVarTuple(
                                    TypeParamTypeVarTuple {
                                        range: 64..77,
                                        node_index: AtomicNodeIndex(..),
                                        name: Identifier {
                                            id: Name("Ts"),
                                            range: 65..67,
                                            node_index: AtomicNodeIndex(..),
                                        },
                                        default: Some(
                                            Yield(
                                                ExprYield {
                                                    node_index: AtomicNodeIndex(..),
                                                    range: 70..77,
                                                    value: Some(
                                                        Name(
                                                            ExprName {
                                                                node_index: AtomicNodeIndex(..),
                                                                range: 76..77,
                                                                id: Name("x"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                    ),
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: AtomicNodeIndex(..),
                            range: 81..84,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: AtomicNodeIndex(..),
                    range: 85..117,
                    name: Name(
                        ExprName {
                            node_index: AtomicNodeIndex(..),
                            range: 90..91,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 91..111,
                            node_index: AtomicNodeIndex(..),
                            type_params: [
                                TypeVarTuple(
                                    TypeParamTypeVarTuple {
                                        range: 92..110,
                                        node_index: AtomicNodeIndex(..),
                                        name: Identifier {
                                            id: Name("Ts"),
                                            range: 93..95,
                                            node_index: AtomicNodeIndex(..),
                                        },
                                        default: Some(
                                            YieldFrom(
                                                ExprYieldFrom {
                                                    node_index: AtomicNodeIndex(..),
                                                    range: 98..110,
                                                    value: Name(
                                                        ExprName {
                                                            node_index: AtomicNodeIndex(..),
                                                            range: 109..110,
                                                            id: Name("x"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: AtomicNodeIndex(..),
                            range: 114..117,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: AtomicNodeIndex(..),
                    range: 118..146,
                    name: Name(
                        ExprName {
                            node_index: AtomicNodeIndex(..),
                            range: 123..124,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 124..140,
                            node_index: AtomicNodeIndex(..),
                            type_params: [
                                TypeVarTuple(
                                    TypeParamTypeVarTuple {
                                        range: 125..132,
                                        node_index: AtomicNodeIndex(..),
                                        name: Identifier {
                                            id: Name("Ts"),
                                            range: 126..128,
                                            node_index: AtomicNodeIndex(..),
                                        },
                                        default: Some(
                                            Name(
                                                ExprName {
                                                    node_index: AtomicNodeIndex(..),
                                                    range: 131..132,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 136..139,
                                        node_index: AtomicNodeIndex(..),
                                        name: Identifier {
                                            id: Name("int"),
                                            range: 136..139,
                                            node_index: AtomicNodeIndex(..),
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: AtomicNodeIndex(..),
                            range: 143..146,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | type X[*Ts = *int] = int
2 | type X[*Ts = *int or str] = int
  |               ^^^^^^^^^^ Syntax Error: Boolean expression cannot be used here
3 | type X[*Ts = yield x] = int
4 | type X[*Ts = yield from x] = int
  |


  |
1 | type X[*Ts = *int] = int
2 | type X[*Ts = *int or str] = int
3 | type X[*Ts = yield x] = int
  |              ^^^^^^^ Syntax Error: Yield expression cannot be used here
4 | type X[*Ts = yield from x] = int
5 | type X[*Ts = x := int] = int
  |


  |
2 | type X[*Ts = *int or str] = int
3 | type X[*Ts = yield x] = int
4 | type X[*Ts = yield from x] = int
  |              ^^^^^^^^^^^^ Syntax Error: Yield expression cannot be used here
5 | type X[*Ts = x := int] = int
  |


  |
3 | type X[*Ts = yield x] = int
4 | type X[*Ts = yield from x] = int
5 | type X[*Ts = x := int] = int
  |                ^^ Syntax Error: Expected ',', found ':='
  |


## Semantic Syntax Errors

  |
1 | type X[*Ts = *int] = int
2 | type X[*Ts = *int or str] = int
3 | type X[*Ts = yield x] = int
  |              ^^^^^^^ Syntax Error: yield expression cannot be used within a TypeVarTuple default
4 | type X[*Ts = yield from x] = int
5 | type X[*Ts = x := int] = int
  |


  |
2 | type X[*Ts = *int or str] = int
3 | type X[*Ts = yield x] = int
4 | type X[*Ts = yield from x] = int
  |              ^^^^^^^^^^^^ Syntax Error: yield expression cannot be used within a TypeVarTuple default
5 | type X[*Ts = x := int] = int
  |
